[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
deadpool-postgres = "0.12.1"
tokio-postgres = "0.7.10"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.7.0", features = ["serde", "v4", "fast-rng"] }
chrono = "0.4.35"
deadpool-redis = { version = "0.14.0", features = ["serde"] }
config = "0.14.0"
reqwest = "0.11"
futures = "0.3"
deadqueue = "0.2"
sql-builder = "3.1"
env_logger = "0.11.3"
log = "0.4.17"


# [dev-dependencies]
# cargo-watch = "8.5.2"